--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
 @import "tailwindcss";
 
+@theme {
+  --color-bone: #DDD8D0;
+  --color-lion: #D9B08C;
+  --color-verdigris: #6D9294;
+  --color-pine: #06544B;
+  --color-ink: #1B1E20;
+}
 
 /* #root {
   max-width: 1280px;
