make navbar sticky, rename components for consistency

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 
 @theme {
   --color-bone: #DDD8D0;
-  --color-lion: #D9B08C;
+  --color-lion: #C5A182;
   --color-verdigris: #6D9294;
   --color-pine: #06544B;
   --color-ink: #1B1E20;
